# static/openapi.yaml
@@ -62,11 +62,11 @@ paths:
       # description: Update an existing pet by Id
       # operationId: updatePet
       requestBody:
-        description: the code to upload
+        description: information on the code to upload
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Code"
+              $ref: "#/components/schemas/CodeRequest"
           # application/xml:
           #   schema:
           #     $ref: "#/components/schemas/Pet"
@@ -181,7 +181,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Code"
+              $ref: "#/components/schemas/CodeRequest"
         required: true
       responses:
         "200":
@@ -212,12 +212,16 @@ paths:
 
 components:
   schemas:
-    Code:
+    CodeRequest:
       type: object
       properties:
         code:
           type: string
           example: print('Hello world')
+        source_id:
+          type: string
+          example: ksi:task_99:user_aa554ae56217f
+      required: [code]
     CodeFile:
       type: string
       format: binary
